# OpenBangla-Keyboard

.cache/clangd/index/: AboutDialog.cpp.CAFE1CEDA7BE420F.idx  AboutDialog.h.CEEDAD2DF2D00A4D.idx  AboutFile.cpp.8BD3534BCCC0701D.idx  AboutFile.h.48ECB2E9FC36A0B8.idx  AutoCorrectDialog.cpp.39312541DC835912.idx  AutoCorrectDialog.h.137341116B44BA33.idx  AvroPhonetic.cpp.E09F4AA73CADA093.idx  AvroPhonetic.h.9411B0B45D1A001F.idx  Downloader.cpp.363FAF0E1EB3D1FF.idx  Downloader.h.A80CE303BA9E2D9E.idx  FileSystem.cpp.177860E8A3B5513C.idx  FileSystem.h.7D5C1E275010744E.idx  Layout.cpp.4EF42138A05CE630.idx  Layout.h.FA5BC575462CC87A.idx  LayoutConverter.cpp.ADE86FC84AC78CAE.idx  LayoutConverter.h.B748EC957FF13EE5.idx  LayoutViewer.cpp.E3BC1B04DC671666.idx  LayoutViewer.h.B40239F00DF37217.idx  Log.h.27916A1BB2D6D766.idx  QSimpleUpdater.cpp.F5C0CC8D1CB04FDE.idx  QSimpleUpdater.h.E1995C20D8CFE998.idx  Settings.cpp.2748A23F3B0F1FCA.idx  Settings.h.88A3087B2EED1C2B.idx  SettingsDialog.cpp.8D66C965FB39DF2C.idx  SettingsDialog.h.DF4E05A693DAF003.idx  SingleInstance.cpp.38A7CE51D0932E52.idx  SingleInstance.h.D0A68B802C20BEA5.idx  TopBar.cpp.498F2DCAA038AA22.idx  TopBar.h.ED83902109270F4B.idx  Updater.cpp.8B6A4698CF4636F8.idx  Updater.h.2D9C166B61814AAA.idx  base.hpp.B488B5C89F362736.idx  keycode.h.DA1C3762FD48F5D3.idx  main.cpp.BAA5F6D78CCBD621.idx  main.cpp.E7220DE1DEC16D91.idx  (+1 more)
src/engine/ibus-rs/: Cargo.toml
src/engine/ibus-rs/src/: constants.rs  keycode.rs  main.rs  settings.rs  state.rs
src/engine/ibus-rs/src/signal_handler/: bus.rs  engine.rs  mod.rs
(+4 files in other folders)
